[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/skill_icon.gd" type="Script" id=1]
[ext_resource path="res://interface/sprites/grey_panel.png" type="Texture" id=2]
[ext_resource path="res://objects/miscellaneous/crosshairs/sprites/crosshair042.png" type="Texture" id=3]
[ext_resource path="res://interface/theme/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://interface/theme/fonts/skill_icon_control_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://sfx/kenney_digital_audio/power_up_9.ogg" type="AudioStream" id=6]

[node name="SkillIcon" type="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="." index="0"]

modulate = Color( 0.164063, 0.164063, 0.164063, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Icon" type="NinePatchRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Overlay" type="NinePatchRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 78.0
margin_bottom = 78.0
rect_min_size = Vector2( 78, 78 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Rect" ]

[node name="CooldownTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="CooldownLabel" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 23.0
margin_top = 25.0
margin_right = 54.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors" ]

[node name="ControlPivot" type="Position2D" parent="." index="5"]

[node name="Panel" type="Panel" parent="ControlPivot" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 57.0
margin_right = 95.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ControlLabel" type="Label" parent="ControlPivot" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "A"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts" ]

[node name="CooldownAudio" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 6 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "SFX"


